external-crates/move/crates/move-compiler/tests/development/enums/naming/pattern_ellipsis.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/naming/pattern_ellipsis.move:2:17
  │
2 │     public enum X has drop {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
  ┌─ tests/development/enums/naming/pattern_ellipsis.move:8:17
  │
8 │     public enum Y {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

